// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerText renders header when props.bannerText is a string 1`] = `
<div
  className="BannerText"
>
  foo text
</div>
`;

exports[`BannerText renders styled header when props.bannerText is a styled value 1`] = `
<div
  className="BannerText"
  style={
    Object {
      "background": "red",
      "color": "white",
    }
  }
>
  foo text
</div>
`;
